force-app/main/default/objects/conference360__Event_Notification__c/fields/conference360__Attendee_Attendance_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Attendance_Status__c</fullName>
    <label>Attendee Attendance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>