force-app/main/default/objects/conference360__Event_Notification__c/fields/conference360__Attendee_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Registration_Status__c</fullName>
    <label>Attendee Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>