force-app/main/default/objects/conference360__Event_Notification__c/fields/conference360__Data__c.field-meta.xml
<CustomField>
    <fullName>conference360__Data__c</fullName>
    <description>JSON object to pass additional information.</description>
    <inlineHelpText>JSON object to pass additional information.</inlineHelpText>
    <label>Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>