force-app/main/default/objects/conference360__Event_Notification__c/fields/conference360__Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__Message__c</fullName>
    <label>Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>