force-app/main/default/objects/conference360__Event_Notification__c/fields/conference360__Title__c.field-meta.xml
<CustomField>
    <fullName>conference360__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>