force-app/main/default/objects/conference360__Event_Notification__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__Event__c</columns>
    <columns>conference360__Message__c</columns>
    <columns>conference360__Send_Date__c</columns>
    <columns>conference360__Send_Time__c</columns>
    <columns>conference360__Status__c</columns>
    <columns>conference360__Title__c</columns>
    <columns>conference360__Attendee_Attendance_Status__c</columns>
    <columns>conference360__Attendee_Registration_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>